frontend/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    font-family: Outfit;
}

.active hr {
    @apply block
}

@media (max-width:740px) {
    .active  p{
       @apply text-white bg-primary
    }
}

::-webkit-scrollbar {
    @apply hidden
}

